--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
   # Mesmerizing by xposedbones 
   https://codepen.io/xposedbones/pen/aOrQVy
 */
+
 :root {
-  --anispeed: 10s;
+  --anispeed: 22s;
 }
 
 body {
@@ -50,18 +51,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-360deg);
   }
 }
+
 @keyframes circle-1 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-360deg);
   }
 }
+
 .holder .circle:nth-child(2) {
   border: 13px solid black;
   border-bottom: none;
@@ -77,18 +82,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-720deg);
   }
 }
+
 @keyframes circle-2 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-720deg);
   }
 }
+
 .holder .circle:nth-child(3) {
   border: 13px solid black;
   border-bottom: none;
@@ -104,18 +113,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-1080deg);
   }
 }
+
 @keyframes circle-3 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-1080deg);
   }
 }
+
 .holder .circle:nth-child(4) {
   border: 13px solid black;
   border-bottom: none;
@@ -131,18 +144,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-1440deg);
   }
 }
+
 @keyframes circle-4 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-1440deg);
   }
 }
+
 .holder .circle:nth-child(5) {
   border: 13px solid black;
   border-bottom: none;
@@ -158,18 +175,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-1800deg);
   }
 }
+
 @keyframes circle-5 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-1800deg);
   }
 }
+
 .holder .circle:nth-child(6) {
   border: 13px solid black;
   border-bottom: none;
@@ -185,18 +206,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-2160deg);
   }
 }
+
 @keyframes circle-6 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-2160deg);
   }
 }
+
 .holder .circle:nth-child(7) {
   border: 13px solid black;
   border-bottom: none;
@@ -212,18 +237,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-2520deg);
   }
 }
+
 @keyframes circle-7 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-2520deg);
   }
 }
+
 .holder .circle:nth-child(8) {
   border: 13px solid black;
   border-bottom: none;
@@ -239,18 +268,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-2880deg);
   }
 }
+
 @keyframes circle-8 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-2880deg);
   }
 }
+
 .holder .circle:nth-child(9) {
   border: 13px solid black;
   border-bottom: none;
@@ -266,18 +299,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-3240deg);
   }
 }
+
 @keyframes circle-9 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-3240deg);
   }
 }
+
 .holder .circle:nth-child(10) {
   border: 13px solid black;
   border-bottom: none;
@@ -293,18 +330,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-3600deg);
   }
 }
+
 @keyframes circle-10 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-3600deg);
   }
 }
+
 .holder .circle:nth-child(11) {
   border: 13px solid black;
   border-bottom: none;
@@ -320,18 +361,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-3960deg);
   }
 }
+
 @keyframes circle-11 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-3960deg);
   }
 }
+
 .holder .circle:nth-child(12) {
   border: 13px solid black;
   border-bottom: none;
@@ -347,18 +392,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-4320deg);
   }
 }
+
 @keyframes circle-12 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-4320deg);
   }
 }
+
 .holder .circle:nth-child(13) {
   border: 13px solid black;
   border-bottom: none;
@@ -374,18 +423,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-4680deg);
   }
 }
+
 @keyframes circle-13 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-4680deg);
   }
 }
+
 .holder .circle:nth-child(14) {
   border: 13px solid black;
   border-bottom: none;
@@ -401,18 +454,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-5040deg);
   }
 }
+
 @keyframes circle-14 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-5040deg);
   }
 }
+
 .holder .circle:nth-child(15) {
   border: 13px solid black;
   border-bottom: none;
@@ -428,18 +485,22 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-5400deg);
   }
 }
+
 @keyframes circle-15 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-5400deg);
   }
 }
+
 .holder .circle:nth-child(16) {
   border: 13px solid black;
   border-bottom: none;
@@ -455,16 +516,24 @@ body {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-5760deg);
   }
 }
+
 @keyframes circle-16 {
   0% {
     transform: translateX(-50%) rotate(0deg);
   }
+
   100% {
     transform: translateX(-50%) rotate(-5760deg);
   }
 }
-/* # Mesmerizing by xposedbones */
+
+@media (prefers-reduced-motion: reduce) {
+  .holder .circle {
+    animation: none;
+  }
+}
